--- a/src/app/payment/plan-billing/plan-billing.component.scss
+++ b/src/app/payment/plan-billing/plan-billing.component.scss
@@ -7,6 +7,26 @@
   background: #fafafa;
   border-radius: 4px;
 
+  .error-message {
+    display: flex;
+    align-items: center;
+    border-radius: 4px 4px 0 0;
+    padding: 20px;
+    color: #ffffff;
+    background-color: $danger-color;
+
+    mat-icon {
+      margin-left: auto;
+      background: #C2213E;
+      padding: 8px;
+      border-radius: 50%;
+      opacity: 0.7;
+      height: 36px;
+      width: 36px;
+      font-size: 36px;
+    }
+  }
+
   .title {
     padding: 22px;
     color: #333333;
