--- a/src/app/payment/plan-billing/plan-billing.component.html
+++ b/src/app/payment/plan-billing/plan-billing.component.html
@@ -9,6 +9,6 @@
 
   <div class="buttons">
     <button mat-button (click)="changePlan.emit(true)">BACK</button>
-    <button mat-button (click)="submitCreditCard()">{{errorMessage ? 'RETRY PAYMENT' : 'PAY'}}</button>
+    <button mat-button (click)="submitCreditCard()">NEXT</button>
   </div>
 </div>
