--- a/src/app/pages/customer-advanced-page/item-components/transactions-table/transactions-table.component.scss
+++ b/src/app/pages/customer-advanced-page/item-components/transactions-table/transactions-table.component.scss
@@ -56,6 +56,10 @@
         color: #DC2547;
       }
 
+      .soft-decline {
+        color: #ED6922;
+      }
+
       .success {
         background: #1EBEA5;
         color: #ffffff;
