--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -188,6 +188,10 @@
               font-size: 24px;
               width: 24px;
               height: 24px;
+
+              &--soft {
+                color: #ED6922;
+              }
             }
           }
         }
