Consolidate soft/hard declines

--- a/src/app/pages/customer-advanced-page/transaction-single-view/transaction-single-view.component.html
+++ b/src/app/pages/customer-advanced-page/transaction-single-view/transaction-single-view.component.html
@@ -63,7 +63,7 @@
 
           <div class="entity-view__card__content">
             <mat-form-field class="entity-view__card__content__item">
-              <input disabled matInput placeholder="Processor Message" [(ngModel)]="_transaction.processorResponse.message" type="text">
+              <input disabled matInput placeholder="Processor Message" [(ngModel)]="_transaction.resultParsed" type="text">
             </mat-form-field>
 
             <mat-form-field class="entity-view__card__content__item response-text">
