Fix customers order dissapearing when digging in

--- a/src/app/pages/customer-advanced-page/customer-advanced-orders/customer-advanced-orders.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-orders/customer-advanced-orders.component.html
@@ -3,7 +3,7 @@
 
     <mat-tab>
 
-      <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedOrder ? 1 : selectedGranularityIndex">
+      <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedOrder ? 1 : selectedGranularityIndex == 1 ? 0 : selectedGranularityIndex ">
 
         <mat-tab>
           <div>
