--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -62,12 +62,11 @@
       border-radius: 3px;
       font-weight: 500;
       font-size: 9px;
-      transform: translateX(-50%);
+      transform: translateX(-11%);
 
       &__pointer {
         position: absolute;
-        left: calc(50% + 1px);
-        transform: translateX(-50%);
+        transform: translateX(-32%);
         bottom: -6px;
         width: 0;
         height: 0;
@@ -126,11 +125,6 @@
     transition: top 0.6s cubic-bezier(0.35, 0, 0.25, 1);
   }
 
-  .item-selected {
-    .bar {
-    }
-  }
-
   .cycle-flag {
     position: absolute;
     width: 1px;
@@ -153,6 +147,7 @@
     .date-box {
       position: absolute;
       top: 0;
+      z-index: 2;
       padding: 4px 6px;
       border-radius: 0 3px 3px 0;
       background: #8C8787;
