--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -304,3 +304,35 @@ mat-dialog-container {
   }
 
 }
+
+.delete-dialog-container {
+  max-width: 330px;
+  line-height: 24px;
+  font-size: 16px;
+  font-family: Roboto, sans-serif;
+
+  .text {
+    font-weight: 500;
+  }
+
+  .secondary {
+    margin-top: 30px;
+  }
+
+  .items-list {
+    margin-top: 25px;
+  }
+
+  .buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 35px;
+
+    button:last-of-type {
+      margin-left: 10px;
+      background: $main-color-400;
+      color: #ffffff;
+    }
+  }
+}
