--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -304,3 +304,107 @@ $title-color: #8D8888;
   }
 
 }
+
+.grid-body {
+  padding: 20px 25px;
+
+  .header {
+    display: flex;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+
+    button {
+      background: $main-color-200;
+      color: white;
+    }
+
+    .count {
+      margin-left: auto;
+      color: #5F6368;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .sort {
+      display: flex;
+      align-items: center;
+      margin-left: 35px;
+      color: #5F6368;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+  }
+
+  .content-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 24px;
+    margin-left: -12px;
+    margin-right: -12px;
+
+    .entity-card {
+      position: relative;
+      margin-bottom: 24px;
+      margin-right: 12px;
+      margin-left: 12px;
+      width: calc(25% - 24px);
+      box-sizing: border-box;
+      background: white;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.24);
+      color: #202124;
+
+      @media only screen and (max-width: 1200px) {
+        width: calc(33% - 24px);
+      }
+
+      @media only screen and (max-width: 900px) {
+        width: calc(50% - 24px);
+      }
+
+      @media only screen and (max-width: 600px) {
+        width: 100%;
+      }
+
+      .title {
+        display: flex;
+        align-items: center;
+        background: #ffffff;
+        padding: 12px 15px 12px 22px;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 500;
+      }
+
+      mat-icon {
+        &:first-of-type {
+          margin-left: auto;
+        }
+
+        color: rgba(0, 0, 0, 0.54);
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+        cursor: pointer;
+        color: #2C98F0;
+      }
+
+      .delete-icon {
+        margin-right: 10px;
+        height: 22px;
+        width: 22px;
+        font-size: 22px;
+      }
+    }
+  }
+
+  .mrw-bi-input {
+    color: #5F6368;
+    background-color: rgba(0, 0, 0, 0.12);
+  }
+
+  .add-new-button {
+    margin-right: 24px;
+  }
+}
