--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -1,65 +1,101 @@
-<div *ngIf="entity; else spinner" class="entity-view">
+<div class="split-wrapper">
+  <div class="container">
+    <blue-header [items]="breadcrumbs" [titleValue]="entityBackup ? entityBackup.name : null"></blue-header>
 
-  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name"></blue-header>
+    <div class="content">
 
-  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
+      <div class="section section--main" [class.section--full]="!infoVisible">
+        <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)">
+          <div class="buttons">
+            <button mat-button (click)="remove()">DELETE</button>
+            <mat-icon *ngIf="selectedIndex !== 5" class="info-icon" [class.info-icon--active]="infoVisible" (click)="infoVisible = !infoVisible">info</mat-icon>
+          </div>
+        </tab-header>
 
-  <mat-tab-group [(selectedIndex)]="selectedIndex">
-    <mat-tab>
-      <div class="flex-custom">
-        <product-add-new (changeMode)="setMode($event)"
-                         (cancel)="cancelProductUpdate()"
-                         (deleteEntity)="deleteProduct()"
-                         (save)="save($event)"
-                         [mode]="viewMode ? modes.View : modes.Update"
-                         [entity]="entity">
-        </product-add-new>
+        <mat-tab-group *ngIf="entity" class="tab--no-header tab--body-fit" [(selectedIndex)]="selectedIndex">
 
-        <product-attributes [attributes]="entityAttributes" [mode]="viewMode ? modes.View : modes.Update"></product-attributes>
+          <mat-tab>
+            <product-images-gallery *ngIf="entity"
+                                    [product]="entity"
+                                    (uploadImage)="addNewImage($event)"
+                                    (setDefaultImage)="updateDefaultImage($event)"
+                                    (imageDeleted)="deleteImage($event)">
+            </product-images-gallery>
+
+            <div class="description-container">
+              <div class="title">Description</div>
+
+              <textarea [(ngModel)]="entity.description" name="description" rows="8"></textarea>
+
+              <div class="button-container">
+                <button mat-button (click)="updateEntity(entity)">Save</button>
+              </div>
+            </div>
+          </mat-tab>
+
+          <mat-tab>
+            <product-emails [product]="entity"></product-emails>
+          </mat-tab>
+
+        </mat-tab-group>
       </div>
-    </mat-tab>
 
-    <mat-tab>
-      <product-images
-        [images]="entity.attributes.images"
-        (imageUploaded)="addNewImage($event)"
-        (imageDeleted)="deleteImage($event)"
-        (imageUpdated)="updateImage($event)">
-      </product-images>
-    </mat-tab>
+      <div class="section section--side" [class.section--invisible]="!infoVisible">
+        <tab-header [elements]="secondaryTabHeaders" [selectedIndex]="0" [ignoreUrl]="true">
+          <mat-icon class="info-icon" (click)="infoVisible = false">close</mat-icon>
+        </tab-header>
 
-    <mat-tab>
-      <product-product-schedules [id]="entity.id"
-                                 [defaultPrice]="entity.defaultPrice"
-                                 (allEntities)="setCanNotBeDeleted($event)">
-      </product-product-schedules>
-    </mat-tab>
+        <div class="section__content">
+          <ng-container *ngIf="entity">
+            <div class="details-box details-box--blue">
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="entity.name">
+              </mat-form-field>
 
-    <mat-tab>
-      <product-campaigns [id]="entity.id"></product-campaigns>
-    </mat-tab>
+              <mat-form-field>
+                <input type="text" matInput placeholder="Merchant Processing">
+              </mat-form-field>
 
-    <mat-tab>
-      <product-merchant-provider-group-associations [id]="entity.id"></product-merchant-provider-group-associations>
-    </mat-tab>
+            </div>
+            <div class="details-box">
+              <div class="box-title">General</div>
+              <mat-form-field>
+                <input type="text" matInput placeholder="SKU" [(ngModel)]="entity.sku">
+              </mat-form-field>
 
-    <mat-tab>
+              <div class="row">
+                <mat-form-field>
+                  <input matInput currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" placeholder="Default Price" type="text">
+                </mat-form-field>
 
-      <table-memory
-          [data]="entity.emailTemplates"
-          [columnParams]="emailTemplateColumnParams"
-          [associateData]="emailTemplateService.entities$ | async"
-          [textOptions]="emailText"
-          [associateDataMapper]="emailTemplateMapper"
-          (associate)="associateEmailTemplate($event)"
-          (disassociate)="disassociateEmailTemplate($event)"
-          (view)="viewEmailTemplate($event)">
-      </table-memory>
+                <mat-form-field>
+                  <input type="number" matInput placeholder="Quantity" [(ngModel)]="entity.quantity">
+                </mat-form-field>
+              </div>
 
-    </mat-tab>
-  </mat-tab-group>
+              <mat-checkbox class="checkbox-blue" [(ngModel)]="entity.ship">is Shippable</mat-checkbox>
+
+              <ng-container *ngIf="entity.ship">
+                <mat-form-field>
+                  <input matInput type="text" [(ngModel)]="entity.fulfillmentProvider.name" placeholder="Fulfillment Provider">
+                </mat-form-field>
+
+                <div class="row">
+                  <mat-form-field>
+                    <input matInput type="text" currencyInput placeholder="Shipping Price">
+                  </mat-form-field>
+                  <mat-form-field>
+                    <input matInput [(ngModel)]="entity.shippingDelay" placeholder="Shipping Delay">
+                  </mat-form-field>
+                </div>
+
+              </ng-container>
+
+              <button mat-button>CREATE SUBSCRIPTION</button>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<ng-template #spinner>
-  <spe-loader [numberOfTabs]="5" [cardsExpression]="'436px;300px'" [title]="'PRODUCT_INDEX_TITLE' | translate"></spe-loader>
-</ng-template>
