--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -31,7 +31,7 @@
 
       <div style="margin-top: 15px;" class="product-view__group">
         <mat-form-field class="entity-view__card__content__item" [class.error]="formInvalid && defaultInvalid()">
-          <input matInput currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_DEFAULTPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
+          <input matInput currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_DEFAULTPRICE' | translate}}" name="defaultPrice" type="text">
         </mat-form-field>
 
         <mat-checkbox class="dynamic-checkbox" [disabled]="mode === view" [checked]="entity.dynamicPrice.enabled" (change)="toggleDynamic()">{{'PRODUCT_INFO_DYNAMICPRICE' | translate}}</mat-checkbox>
@@ -39,11 +39,11 @@
 
       <div *ngIf="entity.dynamicPrice.enabled" style="margin-top: 15px;" class="product-view__group">
         <mat-form-field [class.error]="formInvalid && dynamicInvalid()" class="entity-view__card__content__item">
-          <input matInput [disabled]="mode === view" currencyInput [initPrice]="entity.dynamicPrice.min" (priceChanged)="entity.dynamicPrice.min = $event" placeholder="{{'PRODUCT_INFO_MINPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
+          <input matInput [disabled]="mode === view" currencyInput [initPrice]="entity.dynamicPrice.min" (priceChanged)="entity.dynamicPrice.min = $event" placeholder="{{'PRODUCT_INFO_MINPRICE' | translate}}" name="defaultPrice" type="text">
         </mat-form-field>
 
         <mat-form-field [class.error]="formInvalid && dynamicInvalid()" class="entity-view__card__content__item">
-          <input matInput [disabled]="mode === view" currencyInput [initPrice]="entity.dynamicPrice.max" (priceChanged)="entity.dynamicPrice.max = $event" placeholder="{{'PRODUCT_INFO_MAXPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
+          <input matInput [disabled]="mode === view" currencyInput [initPrice]="entity.dynamicPrice.max" (priceChanged)="entity.dynamicPrice.max = $event" placeholder="{{'PRODUCT_INFO_MAXPRICE' | translate}}" name="defaultPrice" type="text">
         </mat-form-field>
       </div>
 
