--- a/src/app/pages/products-page/product-view/product-emails/product-emails.component.scss
+++ b/src/app/pages/products-page/product-view/product-emails/product-emails.component.scss
@@ -1,7 +1,11 @@
+.content-wrapper {
+  margin-top: 0;
+}
+
 .preview {
   zoom: 0.5;
   text-align: center;
-  height: 345px;
+  height: 325px;
   overflow: auto;
   border-top: 1px solid rgba(0,0,0,0.46);
   border-bottom: 1px solid rgba(0,0,0,0.46);
