--- a/src/app/pages/products-page/product-view/product-view.component.scss
+++ b/src/app/pages/products-page/product-view/product-view.component.scss
@@ -4,17 +4,6 @@
   display: flex;
   align-items: center;
   margin-left: auto;
-
-  button {
-    margin-right: 18px;
-    padding: 0 45px;
-    border-radius: 0;
-    height: 30px;
-    line-height: 30px;
-    background: $danger-color;
-    color: #ffffff;
-    font-size: 13px;
-  }
 }
 
 .title {
@@ -65,7 +54,6 @@
   .box-title {
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 15px;
   }
 
   mat-form-field {
@@ -91,13 +79,114 @@
     margin-top: 10px;
     margin-bottom: 16px;
   }
+}
+
+.action-buttons {
+  margin-top: 15px;
 
   button {
-    margin-top: 25px;
     left: 50%;
     transform: translateX(-50%);
     font-weight: 500;
     color: #ffffff;
     background: $main-color-400;
+    width: 220px;
+
+    &:last-of-type {
+      margin-top: 15px;
+      background: $danger-color;
+    }
   }
+}
+
+.edit-row {
+  display: flex;
+  align-items: center;
+  height: 20px;
+
+  &--first {
+    margin-top: 20px;
+
+    mat-icon {
+      margin-bottom: 12px;
+    }
+  }
+
+  &--second {
+    margin-bottom: 15px;
+  }
+
+  mat-form-field {
+    width: 180px;
+  }
+
+  mat-icon {
+    margin-left: auto;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+    color: #5F6368;
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+  }
+}
+
+.edit-buttons {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+
+  button:first-of-type {
+    margin-left: auto;
+    margin-right: 10px;
+  }
+
+  button:last-of-type {
+    color: #2C98F0;
+  }
+}
+
+.dropdown-container {
+  margin-bottom: 23.625px;
+  cursor: pointer;
+
+  &--first {
+    margin-bottom: 20px;
+    margin-top: 15px;
+  }
+
+  .floating-placeholder {
+    transform: scale(0.75) translateX(-16.5%);
+    color: rgba(0, 0, 0, 0.44);
+    font-weight: 500;
+
+    &--invisible {
+      color: rgba(0,0,0,0);
+    }
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    width: 200px;
+
+    .placeholder {
+      color: rgba(0,0,0,0.54);
+    }
+
+    mat-icon {
+      margin-left: auto;
+      color: #5F6368;
+      font-size: 18px;
+      width: 18px;
+      height: 18px;
+    }
+  }
+}
+
+.new-fulfillment {
+  background: #E5F0F9;
+  padding: 0 36px;
+  margin-bottom: -8px;
 }
