--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -1,4 +1,4 @@
-<div class="split-wrapper">
+<div class="wrapper">
   <div class="container" [class.container--with-side]="detailsElement && selectedIndex === 5">
     <blue-header [items]="breadcrumbs" [titleValue]="getTitle()">
       <ng-container *ngIf="sessionId && session && sessionService.hasWritePermission()">
@@ -12,8 +12,8 @@
       </ng-container>
     </blue-header>
 
-    <div class="content">
-      <div class="section section--main" [class.section--full]="!infoVisible || selectedIndex === 5">
+    <div class="body">
+      <div class="section" [class.section--full]="!infoVisible || selectedIndex === 5">
 
         <ng-container *ngIf="!transactionId; else transactiondetails">
 
@@ -62,7 +62,7 @@
         </ng-template>
       </div>
 
-      <div class="section section--side" [class.section--invisible]="!infoVisible || selectedIndex === 5">
+      <div class="section section--white" [class.section--invisible]="!infoVisible || selectedIndex === 5">
         <tab-header [elements]="secondaryTabHeaders"
                     [selectedIndex]="selectedSecondaryIndex"
                     [ignoreUrl]="true"
@@ -70,19 +70,17 @@
           <mat-icon *ngIf="!selectedTransaction" class="info-icon" (click)="infoVisible = false">close</mat-icon>
         </tab-header>
 
-        <div class="section__content">
-          <mat-tab-group class="tab--no-header tab--full-height" [(selectedIndex)]="selectedSecondaryIndex">
+        <mat-tab-group class="tab--no-header tab--full-height" [(selectedIndex)]="selectedSecondaryIndex">
 
-            <mat-tab>
-              <customer-info [customer]="customer"></customer-info>
-            </mat-tab>
+          <mat-tab>
+            <customer-info [customer]="customer"></customer-info>
+          </mat-tab>
 
-            <mat-tab>
-              <customer-info-notes #customernotes [customer]="customer"></customer-info-notes>
-            </mat-tab>
+          <mat-tab>
+            <customer-info-notes #customernotes [customer]="customer"></customer-info-notes>
+          </mat-tab>
 
-          </mat-tab-group>
-        </div>
+        </mat-tab-group>
       </div>
     </div>
   </div>
