--- a/src/app/pages/customer-advanced-page/customer-advanced.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.scss
@@ -1,4 +1,21 @@
-@import "../../../assets/scss/entity-view";
+$content-height: calc(100vh - 225px);
+$info-width: 290px;
+
+.wrapper {
+  display: flex;
+
+  .container {
+    width: 100%;
+  }
+
+  .details-container {
+
+    &--hidden {
+      width: 0;
+    }
+
+  }
+}
 
 .cancel {
   font-size: 12px;
@@ -26,5 +43,54 @@
     &:last-of-type {
       font-size: 12px;
     }
+  }
+}
+
+.body {
+  display: flex;
+
+  .section {
+    overflow: hidden;
+    transition: 250ms ease-in-out;
+
+    &--white {
+      background: #ffffff;
+    }
+
+    &--full {
+      width: 100% !important;
+      transition: 250ms ease-in-out;
+    }
+
+    &:first-of-type {
+      width: calc(100% - 290px);
+    }
+
+    &:last-of-type {
+      width: $info-width;
+      border-left: 1px solid rgba(0,0,0,0.12);
+    }
+
+    &--invisible {
+      width: 0 !important;
+      transition: 250ms ease-in-out;
+    }
+  }
+}
+
+customer-info, customer-info-notes {
+  display: block;
+  width: $info-width;
+  height: $content-height;
+}
+
+.info-icon {
+  color: rgba(0,0,0,0.7);
+  margin-left: auto;
+  margin-right: 20px;
+  cursor: pointer;
+
+  &--active {
+    color: #2C98F0;
   }
 }
